--- a/rebar.config
+++ b/rebar.config
@@ -4,6 +4,7 @@
 {erl_opts, [debug_info]}.
 
 {deps, [
- {mochiweb, ".*", {git, "git://github.com/mochi/mochiweb.git", "HEAD"}} 
+% {mochiweb, ".*", {git, "git://github.com/mochi/mochiweb.git", "HEAD"}} 
+  {cowboy, "/*", {git, "git://github.com/extend/cowboy.git"}}
 ]}.
 
