--- a/rebar.config
+++ b/rebar.config
@@ -5,6 +5,6 @@
 
 {deps, [
 % {mochiweb, ".*", {git, "git://github.com/mochi/mochiweb.git", "HEAD"}} 
-  {cowboy, ".*", {git, "git://github.com/extend/cowboy.git", "HEAD"}}
+  {cowboy, ".*", {git, "git://github.com/DocMerlin/cowboy.git", "HEAD"}}
 ]}.
 
