--- a/rebar.config
+++ b/rebar.config
@@ -4,7 +4,8 @@
 {erl_opts, [debug_info]}.
 
 {deps, [
-% {mochiweb, ".*", {git, "git://github.com/mochi/mochiweb.git", "HEAD"}} 
-  {cowboy, ".*", {git, "git://github.com/DocMerlin/cowboy.git", "HEAD"}}
+% {mochiweb, "*.", {git, "git://github.com/mochi/mochiweb.git", "HEAD"}} 
+  {cowboy, "0.4.0", {git, "git://github.com/DocMerlin/cowboy.git", "HEAD"}}
 ]}.
+
 
