--- a/rebar.config
+++ b/rebar.config
@@ -5,7 +5,7 @@
 
 {deps, [
 % {mochiweb, ".*", {git, "git://github.com/mochi/mochiweb.git", "HEAD"}} 
-  {cowboy, ".*", {git, "git://github.com/extend/cowboy.git", {tag, "0.6.1"}}}
+%  {cowboy, ".*", {git, "git://github.com/extend/cowboy.git", {tag, "0.6.1"}}}
 ]}.
 
 
