--- a/web_page_dryer_funnel/boss.config
+++ b/web_page_dryer_funnel/boss.config
@@ -151,7 +151,7 @@
 %%   misultin - The Misultin Web Server (deprecated)
 %%   cowboy - The Cowboy Web Server (Comet, WebSockets, highly scalable, ...)
     {port, {env, "PORT"}},
-    {server, mochiweb},
+    {server, cowboy},
 
 
 %%%%%%%%%%%%%%
